center and increase html font size

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -4,7 +4,7 @@
     <title>Arabic Dialect Classifier</title>
 </head>
 <body>
-    <h1>Arabic Dialect Classifier</h1>
-    <p>Write some arabic text and get which dialect it is from</p>
+    <h1 style="text-align: center;font-size: xx-large;">Arabic Dialect Classifier</h1>
+    <p style="text-align: center;font-size: large;">Write some arabic text and get which dialect it is from</p>
 </body>
 </html>
